dc/s2n-quic-dc/src/snapshots/s2n_quic_dc__testing__run_sim_with_snapshot@endpoint__tasks__tests__idle_wheel__recv_idle_wheel_reschedules_active_context.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 TRACE m#task.recv_idle_wheel.drained[recv.0]=1
0:00:00.000000000 TRACE m#task.recv_idle_wheel.drained[recv.0]=0
0:00:00.000000000 TRACE m#task.recv_idle_wheel.drained[recv.0]=0
0:00:30.000000000 TRACE c#test.recv_idle_wheel.receiver[task.wheel_drain]=1
0:00:30.000000000 TRACE c#test.recv_idle_wheel.drain=1
0:00:30.000000000 TRACE g#test.recv_idle_wheel.depth=-1
0:00:30.000000000 TRACE c#test.recv_idle_wheel.sender[task.recv_idle_wheel_drain]=1
0:00:30.000000000 TRACE c#test.recv_idle_wheel.enq=1
0:00:30.000000000 TRACE g#test.recv_idle_wheel.depth=0
0:00:30.000000000 TRACE m#test.recv_idle_wheel.depth_dist=0
0:00:30.000000000 TRACE c#idle.recv.rescheduled=1
0:00:30.000000000 TRACE m#task.recv_idle_wheel.drained[recv.0]=1
0:00:30.000000000 TRACE m#task.recv_idle_wheel.drained[recv.0]=0
0:01:00.000000000 TRACE c#test.recv_idle_wheel.receiver[task.wheel_drain]=1
0:01:00.000000000 TRACE c#test.recv_idle_wheel.drain=1
0:01:00.000000000 TRACE g#test.recv_idle_wheel.depth=-1
0:01:00.000000000 TRACE c#test.recv_idle_wheel.sender[task.recv_idle_wheel_drain]=1
0:01:00.000000000 TRACE c#test.recv_idle_wheel.enq=1
0:01:00.000000000 TRACE g#test.recv_idle_wheel.depth=0
0:01:00.000000000 TRACE m#test.recv_idle_wheel.depth_dist=0
0:01:00.000000000 TRACE c#idle.recv.rescheduled=1
0:01:00.000000000 TRACE m#task.recv_idle_wheel.drained[recv.0]=1
0:01:00.000000000 TRACE m#task.recv_idle_wheel.drained[recv.0]=0
0:01:30.000000000 TRACE c#test.recv_idle_wheel.receiver[task.wheel_drain]=1
0:01:30.000000000 TRACE c#test.recv_idle_wheel.drain=1
0:01:30.000000000 TRACE g#test.recv_idle_wheel.depth=-1
0:01:30.000000000 TRACE c#idle.recv.expired=1
0:01:30.000000000 TRACE m#task.recv_idle_wheel.drained[recv.0]=0
